--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "@types/node": "^18.11.6",
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
-    "react-scripts": "^2.1.3",
-    "sass": "^1.55.0",
+    "react-scripts": "^5.0.1",
     "stylelint-config-standard-scss": "^6.0.0",
     "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "sass": "^1.55.0",
     "stylelint": "^14.14.0",
     "stylelint-config-standard": "^29.0.0",
     "stylelint-order": "^5.0.0"
