--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
     "axios": "^1.1.3",
+    "gsap": "^3.11.3",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
