--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
     "axios": "^1.1.3",
+    "dotenv-expand": "^9.0.0",
     "gsap": "^3.11.3",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
