--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "axios": "^1.1.3",
     "dotenv-expand": "^9.0.0",
     "gsap": "^3.11.3",
+    "i18next": "^22.0.6",
     "lottie-react": "^2.3.1",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.0.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
     "stylelint-config-standard-scss": "^6.0.0",
