--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "stylelint \"**/*.scss\""
+    "lint": "stylelint \"**/*.scss\"",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -52,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^4.0.0",
     "sass": "^1.55.0",
     "stylelint": "^14.14.0",
     "stylelint-config-standard": "^29.0.0",
